--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,8 +25,8 @@
     font-family: "Roboto", sans-serif !important;
     font-style: italic; }
   .question-container .question-row {
-    margin: 5rem 1.5rem;
-    padding: 1rem;
+    margin: 5rem .5rem;
+    padding: 0.2rem;
     border: #464444 1px solid;
     border-radius: 10px;
     font-weight: 800; }
@@ -49,7 +49,7 @@ body {
   font-family: "Roboto", sans-serif !important; }
 
 .main-container {
-  padding: 0 3rem;
+  padding: 0 !important;
   overflow: hidden;
   border-radius: 10px;
   background-color: #fae3e3 !important; }
